package edu.fiuba.algo3.modelo.dtos;

public class EfectoDTO {
    private int puntaje;
    private int multiplicador;

    public int getPuntaje() { return puntaje; }
    public int getMultiplicador() { return multiplicador; }
    public void setPuntaje(int puntaje) { this.puntaje = puntaje; }
    public void setMultiplicador(int multiplicador) { this.multiplicador = multiplicador; }
}
